--- a/WpfCTSUserModule/MainWindow.xaml
+++ b/WpfCTSUserModule/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="WpfCTSUserModule.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="350" Width="525" Loaded="Window_Loaded_1">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="35"/>
@@ -27,7 +27,14 @@
             <Label Grid.Column="0" Grid.Row="0" Content="Available Tests" FontFamily="Arial" FontSize="24" HorizontalAlignment="Center"/>
             <Label Grid.Column="1" Grid.Row="0" Content="Test Parameters" FontFamily="Arial" FontSize="24" HorizontalAlignment="Center"/>
             <ListBox Grid.Column="0" Grid.Row="1" Background="LightYellow" Grid.ColumnSpan="2" />
-            <ListBox Grid.Column="0" Grid.Row="1" x:Name="listBox1" Height="219" Width="227" HorizontalAlignment="Center"/>
+            <ListView Grid.Column="0" Grid.Row="1" Margin="2,2,1,2" Name="testslist" >
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=id}" Header="Name" Width="20" />
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=name}" Header="Name" Width="100" />
+                    </GridView>
+                </ListView.View>
+            </ListView>
             <ListBox Grid.Column="1" Grid.Row="1"  x:Name="listBox2" Width="228" HorizontalAlignment="Center" Margin="15,17,15,84"/>
             <Button x:Name="button" Content="Start test" Grid.Column="1" HorizontalAlignment="Left" Margin="74,196,0,0" Grid.Row="1" VerticalAlignment="Top" Width="117" Height="40" Click="button_Click"/>
         </Grid>
